--- a/control_escolar_api/src/main/resources/application.properties
+++ b/control_escolar_api/src/main/resources/application.properties
@@ -5,3 +5,15 @@ server.port=8088
 spring.datasource.url=jdbc:mysql://localhost:3306/instituto_ingles?useSSL=false&serverTimezone=UTC
 spring.datasource.username=instituto_ingles
 spring.datasource.password=instituto_ingles
+
+# configuration email
+spring.mail.host=smtp.gmail.com
+spring.mail.username=ajaramillo23@gmail.com
+spring.mail.password=armando8
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.port=587
+spring.mail.transport.protocol=smtp
+
+email.bcc = juancarlosvargasservin@gmail.com
