--- a/control_escolar_api/src/main/resources/application.properties
+++ b/control_escolar_api/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8088
+spring.application.name = REST API Control Escolar
 
+server.servlet.context-path = /control_escolar_api
 
 # MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/instituto_ingles?useSSL=false&serverTimezone=UTC
