--- a/control_escolar_api/src/main/resources/application.properties
+++ b/control_escolar_api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name = REST API Control Escolar
 server.servlet.context-path = /control_escolar_api
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/instituto_ingles?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://instituto-ingles.cyv22pjuqhqb.us-east-2.rds.amazonaws.com:3306/instituto_ingles?useSSL=false&serverTimezone=UTC
 spring.datasource.username=instituto_ingles
 spring.datasource.password=instituto_ingles
 
